- added RelatedItems behavior to bandi [eikichi18]
- added Settings fieldset behaviors to bandi [eikichi18]
- created control panel for bandi settings [eikichi18]
- fixed default view for bandi [eikichi18]
- fixed search_bandi_form view [eikichi18]
- fixed collections view [eikichi18]
- added layout bandi for tile [eikichi18]
- added new traduction [eikichi18]

2.2.5 (2017-03-28)
------------------

- Fix condition check in the portlet to show or not tipologia_bando
  [cekk]

2.2.4 (2017-02-24)
------------------

- Improved check on tipologia bando [daniele]


2.2.3 (2017-01-18)
------------------

- Fixed issue about expiration date not set [daniele]


2.2.2 (2017-01-13)
------------------

- Fix syntool retrieve in search view (Plone 4.3 compatibility)
  [cekk]


2.2.1 (2016-06-30)
------------------

- Fix icons rendering for anonymous users [daniele]
- Fix effective date print in portlet, when effective date isn't set
  [cekk]


2.2.0 (2015-12-03)
------------------

- Fixed bando state styles [cekk]
- Fixed metadata names in catalog [cekk]
- Fixed views with new metadata names [cekk]
- Added support for solr in bandi_search [cekk]
- Added versioning support [cekk]
- Removed ATFieldProperty [fdelia]

2.1.3 (2013-01-14)
------------------

- Fixed bando state control [cekk]


2.1.2 (2013-01-14)
------------------

- Fixed bandi portlet fields [cekk]


2.1.1 (2012-12-07)
------------------

- Fixed setuphandlers [cekk]


2.1.0 (2012-12-05)
------------------

- Add ente_bando field and index [cekk]


2.0.3 (2012-10-15)
------------------

- fix translation in search_bandi_form [cekk]


2.0.2 (2012-08-03)
------------------

- fixed import in search.pt [cekk]


2.0.1 (2012-08-03)
------------------

- fixed css [cekk]


2.0.0 (2012-08-03)
------------------

- fix Plone 4 compatibility [cekk]

1.0.9 (2012-02-22)
------------------

- added status icon in bandi search [cekk]

1.0.8 (2012-01-16)
------------------

- added batching in topic view [cekk]
